welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:11: error: ')' expected but ';' found.
setPos(0;2*x-1)
        ^RunHalf:11: error: ';' expected but ')' found.
setPos(0;2*x-1)
              ^